Clean-up: - Add missing @Override annotations - Use diamond inference - Use StandardCharsets